force-app/main/default/objects/ICV_Contract_Performance__c/ICV_Contract_Performance__c.object-meta.xml
<CustomObject>
    <label>ICV Contract Performance</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>ICV Contract Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICV Contract Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>