force-app/main/default/objects/ICV_Contract_Performance__c/fields/ICS_Application_Request__c.field-meta.xml
<CustomField>
    <fullName>ICS_Application_Request__c</fullName>
    <label>ICS Application Request</label>
    <referenceTo>ICS_Application__c</referenceTo>
    <relationshipLabel>ICV Contract Performance</relationshipLabel>
    <relationshipName>ICV_Contract_Performance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>