force-app/main/default/objects/ICV_Contract_Performance__c/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <label>ID Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>